--- a/vignettes/geometr.Rmd
+++ b/vignettes/geometr.Rmd
@@ -185,14 +185,14 @@ A set of features can be regarded as belonging together when they share attribut
 To capture attributes of sets or groups of features, a `geom` has an additional attribute table, one that captures those group attributes.
 Moreover, also the list of points is treated as a separate, third attribute table, for attributes that only the points, but not the features (groups of points) have.
 
-All three attribute tables can be accessed with the function `getTable()`.
+All three attribute tables can be accessed with specific getters.
 
 ```{r}
-getTable(x = nc_geom, slot = "point")
+getPoints(x = nc_geom)
 
-getTable(x = nc_geom, slot = "feature")
+getFeatures(x = nc_geom)
 
-getTable(x = nc_geom, slot = "group")
+getGroups(x = nc_geom)
 ```
 
 We see that the tables contain ID variables, namely `fid` and `gid`, which were not part of the original object.
@@ -203,9 +203,9 @@ This makes no sense, obviously, so `gc_geom` has the argument `group = FALSE/TRU
 ```{r}
 new_geom <- gc_geom(input = nc_sf, group = TRUE)
 
-getTable(x = new_geom, slot = "feature")
+getFeatures(x = new_geom)
 
-getTable(x = new_geom, slot = "group")
+getGroups(x = new_geom)
 ```
 
 It becomes clear, as mentioned above, that this approach to attribute tables makes the class `geom` quite flexible.
@@ -230,11 +230,11 @@ trees <- tibble(fid = clocaenog$Number,
                 height = clocaenog$ht)
 
 # set these as attribute table and select only trees with a height value
-trees <- setTable(x = locations, table = trees) %>% 
-  getSubset(!is.na(height))
+trees <- setFeatures(x = locations, table = trees) %>% 
+  getFeatures(!is.na(height))
 
 # make the title
-treepoints <- getTable(x = trees, slot = "point")
+treepoints <- getPoints(x = trees)
 title <- paste0("Clocaenog - tree heights (", dim(treepoints)[1], ")")
 
 # and visualise
@@ -251,8 +251,7 @@ In case you want to make use of this slot, it can be set via `setHistory()`.
 ```{r}
 visualise(aPoly)
 
-reflPoly <- gs_polygon(anchor = somePoints) %>% 
-  gt_reflect(angle = 45)
+reflPoly <- gt_reflect(geom = aPoly, angle = 45)
 
 visualise(reflPoly, linecol = "deeppink", new = FALSE, trace = TRUE)
 ```
@@ -273,7 +272,7 @@ Consequently, those duplicates have to be handled, for example by removing dupli
 ```{r}
 # make points and discard duplicates ...
 (somePoints <- gs_point(anchor = aPoly) %>% 
-  getSubset(!(duplicated(x) & duplicated(y)), slot = "point"))
+  getPoints(!(duplicated(x) & duplicated(y))))
 
 # ... and recreate (the same) polygon from that 
 (aPoly <- gs_polygon(anchor = somePoints))
@@ -367,5 +366,4 @@ When including additional values, or when building totally new palettes, the col
 ```{r}
 treeTheme <- setTheme(vector = list(linecol = c("#00204DFF", "#73D216FF", "#FFEA46FF", "#CC0000F0")))
 visualise(`Clocaenog - tree heights` = trees, theme = treeTheme, linecol = height)
-
 ```
