--- a/vignettes/geometr.Rmd
+++ b/vignettes/geometr.Rmd
@@ -3,7 +3,7 @@ title: "geometr - An overview"
 author: "Steffen Ehrmann"
 date: "`r Sys.Date()`"
 output: 
-  html_document:
+  bookdown::html_document2:
     toc: yes
     toc_float: true
     number_sections: true
@@ -22,24 +22,43 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
 )
+# load things here for a clean visual experience
+library(sf)
+library(sp)
+library(raster)
+library(geometr)
+library(tibble)
+library(dplyr)
+library(readr)
+library(magrittr)
+getExtent(x = st_read(system.file("shape/nc.shp", package="sf")))
 ```
 
 # Introduction
   
-The `geometr` package aims to generalise the way to interact with spatial and other geometric objects by providing functions that access and modify data components in the same manner across classes.
+The `geometr` generalises the way to interact with spatial and other geometric objects by providing functions that access and modify data components in the same manner across classes.
 Moreover, `geometr` provides a data structure (of class `geom`) that represents the different data components in a truly [tidy](https://tidyr.tidyverse.org/) manner, allowing to generate geometric objects that are easily accessible and play well with other tidy tools.
 
 One could argue that spatial objects are merely a special case of geometric objects, where the coordinates of points refer to real locations on the surface of the earth instead of some virtual (cartesian) coordinate system.
 Geometric and spatial objects typically contain a collection of points that outline a geometric shape, or feature.
-A feature in `geometr` is defined as a set of points that form no more than one single unit of one of the feature types point, line or polygon. 
-Hence, in contrast to the <a href="http://www.opengeospatial.org/standards/sfa" target="_blank">simple features standard</a>, there are no *multi-\** features in `geometr`.
-Sets of features that belong together beyond their geometric connectedness are assigned a common group that can have its own group attributes (more on this in the chapter [Attributes of a `geom`](#attributes-of-a-geom)).
-Features are characterised by a location, some coordinate (reference) system, and various other properties or metadata. 
-Most types or classes of geometric and spatial objects are conceptually quite similar, yet a common, interoperable standard lacks for accessing and modifying features, their points or the metadata.
+A feature in `geometr` is defined as a set of points that form no more than one single unit of one of the types point, line, polygon or grid.
+In contrast to the <a href="http://www.opengeospatial.org/standards/sfa" target="_blank">simple features standard</a>, there are no *multi-\** features in `geometr`, sets of features that belong together beyond their geometric connectedness are instead assigned a common group.
+Consequently, a `geom` is primarily made up of three tables that contain information on points (their coordinates), features and groups.
+The tables are related with feature and group IDs (`fid` and `gid` respectively) and can be provided with additional attributes (more on this in the chapter [\"Attributes of a `geom`\"](#attributes-of-a-geom)).
 
 
 This vignette outlines in detail first how `geometr` improves interoperability, then it describes the datastructure of a `geom`, how different feature types are cast into one another, shows how to visualise geometric objects and eventually gives a short introduction of the tools that come with `geometr`.
 
+```{r, eval=FALSE}
+library(sf)
+library(sp)
+library(raster)
+library(geometr)
+library(tibble)
+library(dplyr)
+library(readr)
+library(magrittr)
+```
 
 # Interoperability
 
@@ -56,23 +75,20 @@ Moreover, distinct workflows provide data so that the same information is not at
 The following code chunk exemplifies this by showing various functions, which are all considered standard in R to date, that derive an extent from specific spatial objects:
 
 ```{r}
-library(sf)
 nc_sf <- st_read(system.file("shape/nc.shp", package="sf"))
 st_bbox(nc_sf)
 
-library(sp)
 nc_sp <- as_Spatial(nc_sf)
 bbox(nc_sp)
 
-library(raster)
 ras <- raster(system.file("external/test.grd", package="raster"))
 extent(ras)
 ```
 
 `st_bbox()` provides the information as a named vector and presents first minimum and then maximum values of both dimensions, `bbox()` provides a table with minimum and maximum values in columns and `extent()` provides the information in an S4 object that presents first the x and then the y values.
-Neither data structures, nor names or positions of the information are comparable.
+Neither data structures, nor names or positions of the information are identical.
 
-For a human user the structure of those information might not matter, because we recognise, in most cases intuitively, where which information is to be found in a datastructure.
+For a human user the structure of those information might not matter because we recognise, in most cases intuitively, where which information is to be found in such a simple datastructure.
 In the above case it is easy to recognise how the combination of column and rownames (of `bbox()`) refers to the already combined names (of `st_bbox()` or `extent()`).
 However, this capacity of humans to recognise information relative to the context needs to be programmed into software, for it to have that ability.
 Think, for example, of a new custom function that is designed to extract and process information from an arbitrary spatial input, i.e., without knowing in advance what spatial class the user will provide. 
@@ -84,7 +100,6 @@ Here, *getters* and *setters* are used as accessor functions, and as pathway to 
 The following code chunk shows how different input classes yield the same output object.
 
 ```{r}
-library(geometr)
 myInput <- nc_sf
 getExtent(x = myInput)
 
@@ -98,7 +113,7 @@ getExtent(x = myInput)
 The output of the getters provided by `geometr` is 
 
 * tidy, i.e., it provides variables in columns, observations in rows and only one value per cell
-* interoperable, i.e., it provides the same information in the same location of the output object, with the same names.
+* semantically interoperable, i.e., it provides the same information in the same location of the output object, with the same names.
 
 This ensures that the information retrieved with getters are compatible with a tidy workflow and that a custom function that processes geometric information requires merely one very simple row of code to extract those information from a potentially wide range of distinct classes.
 
@@ -109,54 +124,111 @@ This ensures that the information retrieved with getters are compatible with a t
 `geometr` comes with the S4 class `geom`, a geometric (spatial) class that has primarily been developed for its interoperability and easy access.
 
 All objects of this class are structurally the same, no slots are removed or added when modifying an object and all properties are labelled with the same terms in each object of that class.
-This interoperability is true for objects representing point (and grid), line or polygon features, for objects that contain a single or several features and for objects that are either merely geometric or indeed spatial/geographic because they contain a coordinate reference system.
-A `geom` contains, moreover, only direct information, i.e., such information that can't be derived from other of its information, such as the extent that is in fact only the minimum and maximum coordinates that make up the geometry.
+This interoperability is true for objects representing point (and grid), line or polygon features, for objects that contain a single or several features and for objects that are either merely geometric or indeed spatial/geographic because they contain a coordinate reference system (crs).
+A `geom` contains, moreover, only direct information, i.e., such information that can't be derived from other of its information, such as the extent (which is in fact only the minimum and maximum coordinates that make up the geometry).
 
+
+## The datastructure of a `geom`
+
+A `geom` contains as its backbone the three slots `@point`, `@feature` and `@group`.
+Each of those slots are a named list that contains as many tables as there are layers in the `geom`.
+The exact values stored in those tables are explained in Tab. \@ref(tab:slots), along the other slots of a `geom`.
+
+| slot | class | description |
+| :---- | :---- | :------------ |
+| `type` | `character` | the type of how the `geom` is processed and visualised. Either `point`, `line`, `polygon` or `grid`. |
+| `point` | `tibble` | the coordinates in x and y dimension and the ID of the feature the point is part of (`fid`). Any other attributes that are valid for each individual point can be joined to this table. |
+| `feature` | `list` of `tibble`s | the feature ID (`fid`) and the ID of the group the feature is part of (`gid`). Any other attributes that are valid for each individual feature can be joined to this table. |
+| `group` | `list` of `tibble`s | the group ID (`gid`) and any attributes that are valid for an overall group. |
+| `window` | `tibble` | the coordinates of a rectangular polygon that outlines the \"enclosing area\" of the `geom`. This is not to be confused with the extent, which is the minimum and maximum values of all dimentions of the `geom` and which is not recorded in a slot but derived from the coordinates. |
+| `scale` | `character` | depending on crs and usecase, the coordinates of points can be documented as `absolute` or `relative` values |
+| `crs` | `character` | the coordinate reference system, currently in proj4 notation. In case no crs has been set, this is shown as \'cartesian\'. |
+| `history` | `list` | all of the functions of `geometr` produce an entry in this list to document [provenance](https://en.wikipedia.org/wiki/Provenance#Data_provenance). |
+
+Table: (\#tab:slots) List of issues, which have to be considered when building a database of areal data from distinct sources.
+
+A `geom` of type grid is a special case of a point `geom` in that it is made up of a systematically distributed lattice of points, thereby resembling `raster` objects.
+A `geom` of type grid contains in the `@point` slot merely a table that contains the minimum and maximum value and the cell size for the x and y dimensions, while a `geom` of type point, line or polygon explicitly contains all the coordinates of the points that make up features. 
+When using the getter `getPoints()`, this slot is "unpacked" into a form that is interoperable with the other `geom` types.
+
+```{r}
+gtGeoms$grid$categorical@point
+getPoints(x = gtGeoms$grid$categorical)
+```
+
+In contrast to `Raster*` objects of the `raster` package, the values in a grid `geom` are [*run-length encoded*](https://en.wikipedia.org/wiki/Run-length_encoding), in case that results in a smaller object, which is often the case for rasters with categorical values.
+
+```{r, fig.height=3.5}
+object.size(gtRasters$categorical)
+object.size(gtGeoms$grid$categorical)
+
+visualise(gtRasters$categorical, gtGeoms$grid$categorical)
+```
+
+As with points, the getter `getFeatures()` unpacks the `@feature` slot into its interoperable form.
+
+```{r}
+gtGeoms$grid$categorical@feature
+getFeatures(x = gtGeoms$grid$categorical)
+```
+
+For raster objects it is intuitively clear that attributes are contained in seperate tables, where unique values of the raster cells are related to attribute values. 
+For vector objects this also seems apparent, however, when digging below the surface there are some difference in interpretation.
+The attribute table for vector objects is typically seen as a table that contains attributes per feature, not per group (of unique features).
+When storing vector data in a simple feature data structure, each feature is an actually not so simple object that can be made up of one or more points or lines, or of a wide range of nested and neighbouring polygons, such as in a `MULTIPOLYGON` or even a mix of all of those in a `GEOMETRYCOLLECTION`.
+
+In `geometr`, in contrast, a feature is a single point, one sequence of points that form a line or a [single polygon](#how-are-polygons-handled), i.e., only a single object of each tpye.
+Any closed path that is not fully enclosed by another closed path, or that is not part of the same line (or the same point...), is thus a distinct feature.
+Obviously, it must be possible to relate features to one another beyond their physical connectedness as closed path, for examples several islands that form a nation.
+In `geometr`, this connectedness is represented by a group ID (`gid`), which relates all features of that group to the group specific attributes in the `@group` slot.
+This has two advantages over simple features:
+
+1. each feature can have both, ancillary information at the feature leve and at the group level (i.e., a feature in the \"simple feature\" sense).
+2. this interpretation allows also raster objects to be captured in the exact same data structure, when regarding the cell values as features and the raster attribute tables as relating groups of unique values/features to group specific attributes.
+
+```{r}
+getGroups(x = gtGeoms$grid$categorical)
+```
 
 ## Create a `geom`
 
-A `geom` can be created simply by transforming it from another class (that is, any class for which a method has been defined), or by using one of the *geometry shape* functions that are labelled `gs_*` in `geometr`.
+A `geom` can be created simply by transforming it from another class in case a method for that class is defined (`showMethods("gc_geom")`), or by using one of the *geometry shape* functions that are labelled `gs_*` in `geometr`.
 
 ```{r}
 # transform from class sf
 (nc_geom <- gc_geom(input = nc_sf))
 
 # make "by hand"
-library(tibble)
 coords <- tibble(x = c(40, 70, 70, 50),
                  y = c(40, 40, 60, 70))
 (somePoints <- gs_point(anchor = coords))
 ```
 
-`nc_geom` is made up of 108 polygon features (with 2529 points), has a coordinate reference system (crs) and a set of (feature) attributes.
-The attributes' values are not shown by the print method of a `geom`, which is a more compact visualisation of the important information.
-Moreover, there is a "tiny map" that shows where the points of the respective `geom` are concentrated.
+`nc_geom` is made up of 100 groups with 108 individual polygon features (with 2529 points), has a crs other than cartesian and a set of (feature) attributes.
+The attributes values are not shown by the print method of a `geom` for compact visualisation of the important information.
+Instead, there is a \"tiny map\" that shows where the points of the respective `geom` are concentrated.
 If there is less than 1/16th of all points in a section of the map, a `r '\u25CC'` is shown, for more than 1/16th but less than 1/8th this is `r '\u25CB'`, for more than 1/8th but less than 1/4th `r '\u25CE'` and for sections with more than 1/4th of points, this is `r '\u25C9'`.
-
-`aPoly` is only made up of one feature with 5 points and a cartesian coordinate system. 
-As a matter of fact, any `geom` that has no crs assigned is assumed to be a mere geometric object of which the values are valid for a cartesian coordinate system.
 
 
 ## How are polygons handled?
 
-You might wonder why it shows 5 points for `aPoly`, while only 4 have been defined.
-This is due to how polygons are stored in a `geom`.
 A polygon is by definition a two-dimensional plane, in contrast to a line that has only one dimension, its length, and a point, which is dimensionless.
-A polygon and a line can be made up of the same points and a polygon is indeed nothing more than a sequence of lines (a path) that outlines the shape of the polygon.
-To then distinguish a line and polygon with the same points, it can be defined that a polygon **must** have duplicate start and end points, which would constitute a *closed path*.
+A polygon and a line can be made up of the same set of points and a polygon is indeed nothing more than a sequence of lines (a path) that outlines the shape of the polygon.
+To then distinguish a line and polygon with the same points, it can be defined that a polygon must have duplicate start and end points, which would constitute a *closed path*.
 
 ```{r}
-aPoly <- gs_polygon(anchor = coords)
-
-getPoints(x = somePoints)
-getPoints(x = aPoly)
+(aPoly <- gs_polygon(anchor = coords))
 ```
 
-Polygons may also have holes (and islands therein), for example a park with a pond that has a little island in the middle.
-Such cases are of course also possible with a `geom` and the only thing to consider is that the outer (closed) ring must be given as first ring.
-All rings that are supposed to be nested within this ring must themselves be closed paths, but their order does not matter.
-Moreover, when building a polygon with hole in `geometr`, the rotation direction described by the sequence of the points does not matter.
-Whether part of a polygon is "inside", and thus whether a closed path describes a hole or not, is determined by the code-logic of the functions processing polygons.
+`aPoly` is made up of one feature with 5 points, has a cartesian coordinate system and the tiny map implies that the point at location `(40|40)` is duplicated. 
+As a matter of fact, any `geom` that has no crs assigned is assumed to be a mere geometric object of which the values are valid in a cartesian coordinate system.
+The function `gs_polygon()` ensures that a polygon fulfills the formal criteria of a polygon, and thus also reconstructs duplicate points that would close individual paths.
+
+Moreover, polygons may have holes (and islands therein), for example a park with a pond that has a little island in the middle.
+When defining polygon `geom`s with nested closed paths (holes), the only thing to consider is that the outer path must be given as first ring and that this outer ring must fully enclose all interior rings.
+All paths that are supposed to be nested within this paths must themselves be closed, but their order does not matter.
+Also, when building a polygon with hole in `geometr`, the rotation direction described by the sequence of the points does not matter, in contrast to other spatial classes to date.
+The correct treatment and visualisation of polygons with interior rings is determined by the code-logic of the functions processing polygons.
 
 ```{r}
 pond <- tibble(x = c(30, 30, 80, 80, 30),
@@ -165,43 +237,22 @@ pond <- tibble(x = c(30, 30, 80, 80, 30),
 island <- tibble(x = c(60, 65, 65, 60, 60),
                 y = c(45, 45, 50, 50, 45),
                 fid = 1)
-temp <- rbind(pond, island, getPoints(aPoly))
+temp <- bind_rows(pond, island, getPoints(aPoly))
 
-perforatedPoly <- gs_polygon(anchor = temp)
+(perforatedPoly <- gs_polygon(anchor = temp))
 visualise(perforatedPoly, fillcol = fid)
 ```
-
-## The grid-`geom`
 
 
 ## Attributes of a `geom`
 
-You may also be wondering why `nc_geom` has 108 features, while `nc_sf` has actually 100 features.
-`nc_sf` consists of 100 "`MULTIPOLYGONS`" where in fact only a small set of them are composed of several polygons.
+`nc_sf` consists of 100 "`MULTIPOLYGONS`" of which in fact only a small number are composed of several polygons.
 This is due the definition of simple features, where one "simple" feature can be of a *multi\** type that comprises several closed paths in the same object and which would thus be called `MULTIPOLYGON`.
 Yet, an object can also contain only a single closed path and still have the feature type `MULTIPOLYGON`.
-In `geometr` these inconsistencies are avoided because they require a lot of extra code logic that is, in my opinion, not worth the supposed flexibility.
-Hence, a `geom` breaks down *multi\**-features into their distinct closed paths, into "simpler features", so to speak.
+In a `geom`, *multi\**-features are broken down into their distinct closed paths, into \"simpler features\", so to speak.
 
-This, however, requires that the togetherness of *multi\**-features has to be captured in another way.
-A set of features can be regarded as belonging together when they share attributes, such as a group of islands that form a nation.
-To capture attributes of sets or groups of features, a `geom` has an additional attribute table, one that captures those group attributes.
-Moreover, also the list of points is treated as a separate, third attribute table, for attributes that only the points, but not the features (groups of points) have.
-
-All three attribute tables can be accessed with specific getters.
-
-```{r}
-getPoints(x = nc_geom)
-
-getFeatures(x = nc_geom)
-
-getGroups(x = nc_geom)
-```
-
-We see that the tables contain ID variables, namely `fid` and `gid`, which were not part of the original object.
-Those allow identifying to which feature coordinates belong and which features form groups.
-We also see that the `feature`-table contains those 108 features and that, for instance, features four, five and six are "the same", or at least have the same attributes.
-This makes no sense, obviously, so `gc_geom` has the argument `group = FALSE/TRUE` to set whether duplicate feature attributes are actually group attributes. 
+By default, the attributes related to each simple feature are also stored in the `@feature` slot in a `geom`, with duplicated entries for all \"simpler features\" that are part of the same simple feature (for instance, features four, five and six in `nc_geom`).
+This may not be desired, for the sake of consistency, so `gc_geom` has the argument `group = FALSE/TRUE` to set whether simple feature attributes shall be regarded as group attributes in the resulting `geom`. 
 
 ```{r}
 new_geom <- gc_geom(input = nc_sf, group = TRUE)
@@ -211,37 +262,44 @@ getFeatures(x = new_geom)
 getGroups(x = new_geom)
 ```
 
-It becomes clear, as mentioned above, that this approach to attribute tables makes the class `geom` quite flexible.
-One could for example assign some measurements of a point pattern (such as [Arne Pommerening's](http://www.pommerening.org) Clocaenog 6 sample data) to the attribute table of a point `geom` of that pattern.
+It becomes clear that this approach to attribute tables makes the class `geom` quite flexible.
+One could for example assign some point specific measurements (such as [Arne Pommerening's](http://www.pommerening.org) Clocaenog 6 sample data) to the point attribute table, and at the same time set group specific attributes to the group attribute table of a point `geom`.
 
 ```{r}
-library(readr)
-library(magrittr)
-clocaenog <- read_delim(file = "http://www.pommerening.org/wiki/images/d/dc/Clg6.txt", 
-                        delim = "\t", col_types = "iifdddd")
+clg_dat <- read_delim(file = "http://www.pommerening.org/wiki/images/d/dc/Clg6.txt", 
+                        delim = "\t", col_types = "iiidddd")
+clg_spec <- read_delim(file = "http://www.pommerening.org/wiki/images/d/df/Clg6.species",
+                       delim = "\t", col_types = "icccc") %>% 
+  mutate_if(is.character, trimws)
 
-# make geom of locations ...
-locations <- tibble(x = clocaenog$x,
-                    y = clocaenog$y,
-                    fid = clocaenog$Number)
-locations <- gs_point(anchor = locations)
+# make table of locations, tree properties and species metadata
+locations <- tibble(x = clg_dat$x,
+                    y = clg_dat$y,
+                    fid = clg_dat$Number)
+prop <- tibble(fid = clg_dat$Number,
+               gid = clg_dat$Species,
+               dbh = clg_dat$dbh,
+               height = clg_dat$ht)
+species <- tibble(gid = unique(clg_dat$Species)) %>% 
+  left_join(clg_spec, by = c("gid" = "NC")) %>% 
+  select(gid, name = CN, scientific = BN) %>% 
+  mutate(deciduous = c(T, T, F, F, F, T, T, F, T, T, F)) %>% 
+  arrange(gid)
 
-# ... and a table of tree properties
-trees <- tibble(fid = clocaenog$Number,
-                species = clocaenog$Species,
-                dbh = clocaenog$dbh,
-                height = clocaenog$ht)
-
-# set these as attribute table and select only trees with a height value
-trees <- setFeatures(x = locations, table = trees) %>% 
-  getFeatures(!is.na(height))
+# set these as attribute tables and select only trees with a height value
+trees <- locations %>%
+  gs_point(anchor = .) %>%
+  setPoints(table = prop) %>%
+  setGroups(table = species)  %>%
+  getPoints(!is.na(height))
 
 # make the title
-treepoints <- getPoints(x = trees)
-title <- paste0("Clocaenog - tree heights (", dim(treepoints)[1], ")")
+validpoints <- getPoints(x = trees)
+title <- paste0("Clocaenog - tree heights (", dim(validpoints)[1], ")")
 
 # and visualise
 visualise(!!title := trees, linecol = height)
+visualise(!!title := getGroups(trees, deciduous), linecol = height)
 ```
 
 
@@ -275,10 +333,10 @@ Consequently, those duplicates have to be handled, for example by removing dupli
 
 ```{r}
 # make points and discard duplicates ...
-(somePoints <- gs_point(anchor = aPoly) %>% 
+(somePoints <- gs_point(anchor = aPoly) %>%
   getPoints(!(duplicated(x) & duplicated(y))))
 
-# ... and recreate (the same) polygon from that 
+# ... and recreate (the same) polygon from that
 (aPoly <- gs_polygon(anchor = somePoints))
 ```
 
