--- a/README.Rmd
+++ b/README.Rmd
@@ -74,44 +74,63 @@ aGeom <- gs_polygon(anchor = coords, window = window)
 nc_geom
 ```
 
-Metadata of different classes can be extracted in interoperable quality (i.e. the same metadata in the same arrangement).
+Metadata of different classes can be extracted in interoperable quality (i.e. the same metadata in different objects/classes have the same name and the same arrangement).
 
 ```{r}
-getTable(x = nc_sf)
-getTable(x = nc_geom, slot = "feature")
+getFeatures(x = nc_sf)
+getFeatures(x = nc_geom)
 ```
 
-A `geom` has three attribute tables, one for points, one for features and one for groups of features, all of which can be provided with ancillary information ([details on data structure of a `geom`](https://ehrmanns.github.io/geometr/articles/geometr.html#description-of-the-class-geom)).
+`geometr` only knows the feature types `point`, `line`, `polygon` and `grid` (a systematic lattice of points). 
+In contrast to the simple features standard, there are no  *MULTI\** features. 
+The way simple features have been implemented in R means that the same information can be stored in several different ways, which are only interoperable after a range of tests and corrections. 
+For example, a group of polygons can make up a `MULTIPOLYGON` with attributes that are valid for the overall group only.
+Likewise, the polygons could be stored at the level of individual \"closed paths\" as `POLYGON`, with specific attributes per polygon.
+Both sets of attributes can only exists either as duplicates for all group specific attribtues in a `POLYGON`, or even more complicated nested attribute tables at the `MULTIPOLYGON` level.
+
+The backbone of a `geom` are three attribute tables, one for points, features and groups of features, the latter two of which can be provided with ancillary information.
+Each feature is stored as a single unit, all of which are related to other features by a group ID, which relates the features to attributes for an overall group.
+Eventually this results in a tidier datastructure with easier access than `Spatial*` of `sf` objects and with higher versatility.
 
 ```{r}
-getTable(x = nc_geom, slot = "point")
+# when using the group = TRUE argument, the attributes of MULTI*-feature are
+# stored in the group attribute table of a geom
+nc_geom <- gc_geom(input = nc_sf, group = TRUE)
+currituck <- getFeatures(x = nc_geom, gid == 4)
+
+getFeatures(x = currituck)
+getGroups(x = currituck)
+
+# and new attributes can be set easily, 
+newTable <- data.frame(fid = c(1:108), 
+                       attrib = rnorm(108))
+(nc_geom <- setFeatures(x = nc_geom, table = newTable))
 ```
 
-Groups of features are called *multi\** features in other packages. By lumping several closed geometric shapes into one multi\* feature, the separate geometric shapes can’t be attributed with ancillary information any more. In a `geom`, multi\* features are separated into distinct (simpler) features, while the attributes of multi\* features can be captured by the *group attribute table*.
+`geometr` comes with the `visualise`, which makes nice-looking diagnostic spatial plots, that show explicit values whenever possible.
+For example, it does not create artificial bins for the values scale, but shows the explicit range of values.
+Moreover, you can easily set plot titles without much effort.
 
-```{r}
-nc_geom2 <- gc_geom(input = nc_sf, group = TRUE)
-currituck <- getSubset(x = nc_geom2, gid == 4)
-getTable(x = currituck, slot = "feature")
-getTable(x = currituck, slot = "group")
-```
-
-Visualise a `geom` and use quick options to scale attributes to plot properties.
-
-```{r}
+```{r, fig.height=3}
 visualise(`North Carolina` = nc_geom)
+```
+
+You can use quick options to modify what of a given object should be shown in the plot, for example to scale the `fillcol`our to the attribute `NWBIR74`.
+
+
+```{r, fig.height=3}
 visualise(`NC - NWBIR74` = nc_geom, fillcol = NWBIR74)
 ```
 
 A `geom` has the slot `@window`, which contains a reference window. This reference window can be used or modified in many functions of `geometr`
 
-```{r}
+```{r, fig.height=3.5}
 visualise(`Currituck` = currituck, window = getExtent(currituck))
 ```
 
 Finally, cast a `geom` to another type simply by providing it in `anchor` of the respective type
 
-```{r}
+```{r, fig.height=3.5}
 library(magrittr)
 boundPoints <- gs_point(anchor = currituck) %>% 
    setWindow(to = getExtent(.))
