--- a/README.Rmd
+++ b/README.Rmd
@@ -86,11 +86,11 @@ In contrast to the simple features standard, there are no  *MULTI\** features.
 The way simple features have been implemented in R means that the same information can be stored in several different ways, which are only interoperable after a range of tests and corrections. 
 For example, a group of polygons can make up a `MULTIPOLYGON` with attributes that are valid for the overall group only.
 Likewise, the polygons could be stored at the level of individual \"closed paths\" as `POLYGON`, with specific attributes per polygon.
-Both sets of attributes can only exists either as duplicates for all group specific attribtues in a `POLYGON`, or even more complicated nested attribute tables at the `MULTIPOLYGON` level.
+Both sets of attributes can only exists either as duplicates for all group specific attributes in a `POLYGON`, or even more complicated nested attribute tables at the `MULTIPOLYGON` level.
 
 The backbone of a `geom` are three attribute tables, one for points, features and groups of features, the latter two of which can be provided with ancillary information.
 Each feature is stored as a single unit, all of which are related to other features by a group ID, which relates the features to attributes for an overall group.
-Eventually this results in a tidier datastructure with easier access than `Spatial*` of `sf` objects and with higher versatility.
+Eventually this results in a tidier data-structure with easier access than `Spatial*` of `sf` objects and with higher versatility.
 
 ```{r}
 # when using the group = TRUE argument, the attributes of MULTI*-feature are
@@ -107,7 +107,7 @@ newTable <- data.frame(fid = c(1:108),
 (nc_geom <- setFeatures(x = nc_geom, table = newTable))
 ```
 
-`geometr` comes with the `visualise`, which makes nice-looking diagnostic spatial plots, that show explicit values whenever possible.
+`geometr` comes with the `visualise` function, which makes nice-looking diagnostic spatial plots, that show explicit values whenever possible.
 For example, it does not create artificial bins for the values scale, but shows the explicit range of values.
 Moreover, you can easily set plot titles without much effort.
 
@@ -115,14 +115,15 @@ Moreover, you can easily set plot titles without much effort.
 visualise(`North Carolina` = nc_geom)
 ```
 
-You can use quick options to modify what of a given object should be shown in the plot, for example to scale the `fillcol`our to the attribute `NWBIR74`.
-
+By default, `visualise` uses the feature ID as fillcolour. 
+You can use quick options to modify which aspect given object should be shown in the plot, for example to scale the `fillcol`our to the attribute `NWBIR74`.
 
 ```{r, fig.height=3}
-visualise(`NC - NWBIR74` = nc_geom, fillcol = NWBIR74)
+myAttr <- "NWBIR74"
+visualise(!!paste0("NC - ", myAttr) := nc_geom, fillcol = !!myAttr)
 ```
 
-A `geom` has the slot `@window`, which contains a reference window. This reference window can be used or modified in many functions of `geometr`
+Each `geom` has the slot `@window`, which contains a reference window. This reference window can be used or modified in many functions of `geometr`
 
 ```{r, fig.height=3.5}
 visualise(`Currituck` = currituck, window = getExtent(currituck))
@@ -134,5 +135,5 @@ Finally, cast a `geom` to another type simply by providing it in `anchor` of the
 library(magrittr)
 boundPoints <- gs_point(anchor = currituck) %>% 
    setWindow(to = getExtent(.))
-visualise(`Currituck - boundary vertices`= boundPoints)
+visualise(`Currituck - boundary vertices`= boundPoints, linecol = fid)
 ```
