adapt argument names that changed in the apckage

--- a/vignettes/geometr.Rmd
+++ b/vignettes/geometr.Rmd
@@ -141,7 +141,6 @@ The exact values stored in those tables are explained in Tab. \@ref(tab:slots), 
 | `feature` | `list` of `tibble`s | the feature ID (`fid`) and the ID of the group the feature is part of (`gid`). Any other attributes that are valid for each individual feature can be joined to this table. |
 | `group` | `list` of `tibble`s | the group ID (`gid`) and any attributes that are valid for an overall group. |
 | `window` | `tibble` | the coordinates of a rectangular polygon that outlines the \"enclosing area\" of the `geom`. This is not to be confused with the extent, which is the minimum and maximum values of all dimensions of the `geom` and which is not recorded in a slot but derived from the coordinates. |
-| `scale` | `character` | depending on crs and usecase, the coordinates of points can be documented as `absolute` or `relative` values |
 | `crs` | `character` | the coordinate reference system, currently in proj4 notation. In case no crs has been set, this is shown as \'cartesian\'. |
 | `history` | `list` | all of the functions of `geometr` produce an entry in this list to document [provenance](https://en.wikipedia.org/wiki/Provenance#Data_provenance). |
 
@@ -298,7 +297,7 @@ title <- paste0("Clocaenog - tree heights (", dim(validpoints)[1], ")")
 
 # and visualise
 visualise(!!title := trees, linecol = height)
-visualise(!!title := getGroups(trees, deciduous), linecol = height)
+visualise(!!title := gt_subset(trees, deciduous), linecol = height)
 ```
 
 
@@ -312,7 +311,7 @@ In case you want to make use of this slot, it can be set via `setHistory()`.
 ```{r}
 visualise(aPoly)
 
-reflPoly <- gt_reflect(geom = aPoly, angle = 45)
+reflPoly <- gt_reflect(obj = aPoly, angle = 45)
 
 visualise(reflPoly, linecol = "deeppink", new = FALSE, trace = TRUE)
 ```
@@ -333,7 +332,7 @@ When casting from a polygon to another type, those duplicates have to be handled
 ```{r}
 # make points and discard duplicates ...
 (somePoints <- gs_point(anchor = aPoly) %>%
-  getPoints(!(duplicated(x) & duplicated(y))))
+  gt_subset(!(duplicated(x) & duplicated(y))))
 
 # ... and recreate a polygon from that
 (aPoly <- gs_polygon(anchor = somePoints))
@@ -361,7 +360,7 @@ To this end, a `geom` would be provided with a reference window from which the r
 ```{r, fig.height=3.5}
 relPoly <- gs_rectangle(anchor = aPoly) %>% 
   setWindow(to = tibble(x = c(0, 100), y = c(0, 100))) %>%
-  gt_scale(to = "relative")
+  gt_scale(range = getWindow(.))
 
 visualise(gtRasters$categorical, gtRasters$continuous)
 visualise(relPoly, linecol = "deeppink", new = FALSE)
@@ -375,8 +374,9 @@ The reference region for a plot can be set via the `window = ` argument in `visu
 To zoom in on `relPoly`, we thus have to assign the plot extent as window to `relPoly` and rescale the relative values to absolute values on that basis.
 
 ```{r}
-zoom <- setWindow(x = relPoly, to = getExtent(x = gtRasters$categorical)) %>% 
-  gt_scale(to = "absolute")
+zoom <- gt_scale(obj = relPoly, range = getExtent(x = gtRasters$categorical)) %>% 
+  setWindow(to = getExtent(x = gtRasters$categorical))
+  
 visualise('zoomed object' = gtRasters$categorical, window = getExtent(x = zoom))
 ```
 
@@ -408,14 +408,14 @@ For example, to make a plot where each point represents the diameter of a tree, 
 
 ```{r}
 treeTheme <- setTheme(scale = list(param = "pointsize", to = "dbh"), 
-                      vector = list(pointsize = c(0.05, 0.77)))
+                      parameters = list(pointsize = c(0.05, 0.77)))
 visualise(`Clocaenog - tree diameters` = trees, theme = treeTheme)
 ```
 
 Alternatively, one could use quick options to set scaling, by providing the property to scale and the attribute to scale to as `property = attribute`, also for several properties at the same time.
 
 ```{r}
-treeTheme <- setTheme(vector = list(pointsize = c(0.05, 0.77)))
+treeTheme <- setTheme(parameters = list(pointsize = c(0.05, 0.77)))
 visualise(`Clocaenog - tree diameters and heights` = trees, theme = treeTheme,
           pointsize = dbh, linecol = height)
 ```
@@ -425,6 +425,6 @@ By default, these are a darkish blue (`#00204D`) for low values and yellow (`#FF
 When including additional values, or when building totally new palettes, the colour can be modified accordingly.
 
 ```{r}
-treeTheme <- setTheme(vector = list(linecol = c("#00204DFF", "#73D216FF", "#FFEA46FF", "#CC0000F0")))
+treeTheme <- setTheme(parameters = list(linecol = c("#00204DFF", "#73D216FF", "#FFEA46FF", "#CC0000F0")))
 visualise(`Clocaenog - tree heights` = trees, theme = treeTheme, linecol = height)
 ```
